# rust-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  benchmark-output.txt  cargo-generate.toml  deny.toml
.github/workflows/: benchmark.yml  build-and-test.yml  coverage-pr.yml  coverage.yml  dependency-audit.yml  docs.yml  linter.yml  semver-checks.yml  ub-detection.yml
dev/bench/: data.js
template_crate/: Cargo.toml
template_crate/benches/: benchmark.rs
template_crate/src/: lib.rs
